<resources>
    <string name="app_name">ArtistHub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="artists">Artists</string>
    <string name="add_field">Add Field</string>
    <string name="add_search">+ Add Search Field</string>
    <string name="type">Type:</string>
    <string name="artist_name_title">Fred</string>
    <string name="type_detail">Person</string>
    <string name="country">Country:</string>
    <string name="country_detail">US</string>
    <string name="score">Score</string>
    <string name="score_detail">100</string>
    <string name="artist_field">artist</string>
    <string name="type_field">type</string>
    <string name="country_field">country</string>
    <string name="gender_field">gender</string>
    <string name="sort_name_field">Sort Name</string>
    <string name="albums">Albums</string>
    <string name="disambiguation">Disambiguation</string>
    <string name="title">Title</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="tracks">Tracks</string>
    <string name="barcode">Barcode</string>
    <string name="album_count">Album Count</string>
    <string name="no_results">No Results</string>
</resources>